--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <li class="menu-item"><a href="./pages/galeria.html" class="menu_link">Galeria</a></li>
             <li class="menu-item"><a href="./pages/contactanos.html" class="menu_link">Contactanos</a></li>
             <li class="menu-item"><a href="./pages/comentarios.html" class="menu_link">Comentarios</a></li>
+            <li class="menu-item"><a href="./pages/boostrap.html" class="menu_link">Boostrap</a></li>
         </ul>
         <div class="redes">
             <a href="https://www.facebook.com/PassThorOficial/videos/2844598062452199" target="_blank"><span
