--- a/pages/equipo.html
+++ b/pages/equipo.html
@@ -42,6 +42,7 @@
             <li class="menu-item"><a href="./galeria.html" class="menu_link">Galeria</a></li>
             <li class="menu-item"><a href="./contactanos.html" class="menu_link">Contactanos</a></li>
             <li class="menu-item"><a href="./comentarios.html" class="menu_link">Comentarios</a></li>
+            <li class="menu-item"><a href="./boostrap.html" class="menu_link">Boostrap</a></li>
         </ul>
         <div class="redes">
             <a href="https://www.facebook.com/PassThorOficial/videos/2844598062452199" target="_blank"><span
